Ready for commit

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p>I am a third-year PhD student at the University of Waterloo, supervised by <a href="https://cs.uwaterloo.ca/~y328yu/">Yaoliang Yu</a>. 
                 My co-supervisor is <a href="https://homepages.inf.ed.ac.uk/imurray2/">Iain Murray</a>. 
                 Before starting my PhD, I obtained a Master of Mathematics from the University of Waterloo and a Bachelor of Science from the Technical University of Munich.
-                My main research interest is generative modeling with a focus on diffusion models.
+                My main research interest is generative modeling, with a focus on diffusion models.
               </p>
               <p style="text-align:center">
                 <a href="mailto:tim.dockhorn@uwaterloo.ca">Email</a> &nbsp/&nbsp
@@ -33,7 +33,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="assets/me.png"><img style="width:100%;max-width:100%" alt="profile photo" src="assets/me.png" class="hoverZoomLink"></a>
+              <a href="assets/me.jpeg"><img style="width:100%;max-width:100%" alt="profile photo" src="assets/me_rounded.jpeg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -46,7 +46,7 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 					
-					<tr bgcolor="#ffffd0">
+					<tr>
 						<td style="padding:20px;width:25%;vertical-align:middle">
 							<img src="assets/dpdm_complexity.png" alt="clean-usnob" width="160" height="143">
 						</td>
@@ -67,11 +67,11 @@
 							/
 							<a href="https://twitter.com/timudk/status/1582717593718181891">twitter</a>
 							<p></p>
-							<p>GENIE distills higher-order score terms into a small neural network and uses them for accelerated diffusion model sampling.</p>
+							<p>We train diffusion models with strict differential privacy guarantees and outperform previous methods by large margins.</p>
 						</td>
 					</tr>
 					<tr>
-						<tr bgcolor="#ffffd0">
+						<tr>
 							<td style="padding:20px;width:25%;vertical-align:middle">
 								<video width=100% autoplay loop muted playsinline>
 									<source src="assets/genie_cats.mp4#t=0.001" type="video/mp4" width="160" height="85">
@@ -98,7 +98,7 @@
 						</td>
 					</tr>
         <tr>
-          <tr bgcolor="#ffffd0">
+          <tr>
 						<td style="padding:20px;width:25%;vertical-align:middle">
 							<video width=100% autoplay loop muted playsinline>
 								<source src="assets/cld_animation.mp4#t=0.001" type="video/mp4" width="160" height="85">
@@ -259,7 +259,7 @@
             <br>
             <a href="https://github.com/timudk/bachelors_thesis">thesis</a>
             <p></p>
-            <p>I review and implement tubulence models within a higher-order discontinuous Galerkin method.</p>
+            <p>I test a variety of tubulence models within a higher-order discontinuous Galerkin method.</p>
           </td>
         </tr>
       
