--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <img src="assets/tolerance_scheduler.png" alt="clean-usnob" width="160" height="117">
           </td>
           <td width="75%" valign="middle">
-            <a href="https://arxiv.org/abs/1904.07200">
+            <a href="https://uwspace.uwaterloo.ca/handle/10012/15354">
               <papertitle>Generative Modeling with Neural Ordinary Differential Equations</papertitle>
             </a>
             <br>
@@ -217,7 +217,7 @@
             <br>
             <em>Master's Thesis</em>, 2017
             <br>
-            <a href="https://github.com/timudk/bachelors_thesis">thesis</a>
+            <a href="https://uwspace.uwaterloo.ca/handle/10012/15354">thesis</a>
             <p></p>
             <p>I give a comprehensive and self-contained introduction to continuous Normalizing Flows, and show that their training can be accelerated using tolerance schedulers.</p>
           </td>
@@ -249,8 +249,8 @@
             <img src="assets/bfs_demo.gif" alt="clean-usnob" width="160" height="72">
           </td>
           <td width="75%" valign="middle">
-            <a href="https://arxiv.org/abs/1904.07200">
-              <papertitle>A Discussion on Solving Partial Differential Equations using Neural Networks</papertitle>
+            <a href="https://github.com/timudk/bachelors_thesis">
+              <papertitle>Turbulence modeling for large eddy simulation using high-order discontinuous Galerkin methods</papertitle>
             </a>
             <br>
             <strong>Tim Dockhorn</strong>
@@ -259,7 +259,7 @@
             <br>
             <a href="https://github.com/timudk/bachelors_thesis">thesis</a>
             <p></p>
-            <p>I test a variety of tubulence models within a higher-order discontinuous Galerkin method.</p>
+            <p>I test a variety of tubulence models within a high-order discontinuous Galerkin method.</p>
           </td>
         </tr>
       
