New workshop paper

--- a/index.html
+++ b/index.html
@@ -45,7 +45,25 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-					
+
+          <tr>
+						<tr>
+							<td style="padding:20px;width:25%;vertical-align:middle">
+								<video width=100% autoplay loop muted playsinline>
+									<source src="assets/cryoem_interpolation.mp4#t=0.001" type="video/mp4" width="160" height="85">
+								</video>
+							</td>
+						<td width="75%" valign="middle">
+								<papertitle>Latent Space Diffusion Models of Cryo-EM Structures</papertitle>
+							<br>
+							<a href="https://karstenkreis.github.io/">Karsten Kreis</a>*, <strong>Tim Dockhorn</strong>*, Zihao Li, <a href="https://people.csail.mit.edu/zhonge/">Ellen Zhong</a>
+							<br>
+							<em>Machine Learning for Structural Biology Workshop, NeurIPS</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
+							<br>
+							<p></p>
+							<p>We train diffusion models over molecular confirmations from cryo-EM imaging data.</p>
+						</td>
+					</tr>
 					<tr>
 						<td style="padding:20px;width:25%;vertical-align:middle">
 							<img src="assets/dpdm_complexity.png" alt="clean-usnob" width="160" height="143">
@@ -191,7 +209,7 @@
             <br>
             <strong>Tim Dockhorn</strong>*, <a href="https://www.jmsrt.ch/">James Ritchie</a>*, <a href="https://cs.uwaterloo.ca/~y328yu/">Yaoliang Yu</a>, <a href="https://homepages.inf.ed.ac.uk/imurray2/">Iain Murray</a>
             <br>
-            <em>ICML workshop</em>, 2020
+            <em>INNF+: Invertible Neural Networks, Normalizing Flows, and Explicit Likelihood Models, ICML</em>, 2020
             <br>
             <a href="https://arxiv.org/abs/2006.09396">arXiv</a>
 						/
