--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
 							<a href="https://karstenkreis.github.io/">Karsten Kreis</a>*, <strong>Tim Dockhorn</strong>*, Zihao Li, <a href="https://people.csail.mit.edu/zhonge/">Ellen Zhong</a>
 							<br>
 							<em>Machine Learning for Structural Biology Workshop, NeurIPS</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
-							<br>
+              <br>
+              <a href="https://arxiv.org/abs/2211.14169">arXiv</a>
+              /
+              <a href="https://twitter.com/ZhongingAlong/status/1598336281792188417">twitter</a>
 							<p></p>
 							<p>We train diffusion models over molecular confirmations from cryo-EM imaging data.</p>
 						</td>
