--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
               <p style="text-align:center">
                 <name>Tim Dockhorn</name>
               </p>
-              <p>I am a third-year PhD student at the University of Waterloo, supervised by <a href="https://cs.uwaterloo.ca/~y328yu/">Yaoliang Yu</a>. 
+              <p>
+                I am a research scientist at <a href="https://stability.ai/">Stability AI</a> and a final-year PhD student at the University of Waterloo, supervised by <a href="https://cs.uwaterloo.ca/~y328yu/">Yaoliang Yu</a>.  
                 My co-supervisor is <a href="https://homepages.inf.ed.ac.uk/imurray2/">Iain Murray</a>. 
-                Before starting my PhD, I obtained a Master of Mathematics from the University of Waterloo and a Bachelor of Science from the Technical University of Munich.
+                Before starting my PhD, I obtained a Master of Mathematics from the University of Waterloo and a Bachelor of Science from the Technical University of Munich. 
                 My main research interest is generative modeling, with a focus on diffusion models.
               </p>
               <p style="text-align:center">
-                <a href="mailto:tim.dockhorn@uwaterloo.ca">Email</a> &nbsp/&nbsp
+                <a href="mailto:timdockhorn@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.ca/citations?user=EtPn_v4AAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/timudk">Twitter</a> &nbsp/&nbsp
                 <a href="https://github.com/timudk/">Github</a>
@@ -45,7 +46,31 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
+          <tr>
+						<tr>
+							<td style="padding:20px;width:25%;vertical-align:middle">
+								<video width=100% autoplay loop muted playsinline>
+									<source src="assets/videoldm_sunset.mp4#t=0.001" type="video/mp4" width="160" height="85">
+								</video>
+							</td>
+						<td width="75%" valign="middle">
+							<a href="https://research.nvidia.com/labs/toronto-ai/VideoLDM/">
+								<papertitle>Align your Latents: High-Resolution Video Synthesis with Latent Diffusion Models</papertitle>
+							</a>
+							<br>
+							Andreas Blattmann*, Robin Rombach*, <a href="http://www.cs.toronto.edu/~linghuan/">Huan Ling</a>*, <strong>Tim Dockhorn</strong>*, <a href="https://seung-kim.github.io/seungkim/">Seung Wook Kim</a>, <a href="https://www.cs.toronto.edu/~fidler/">Sanja Fidler</a>, <a href="https://karstenkreis.github.io/">Karsten Kreis</a>
+							<br>
+							<em>CVPR</em>, 2023
+							<br>
+							<a href="https://arxiv.org/abs/2304.08818">arXiv</a>
+							/
+							<a href="https://research.nvidia.com/labs/toronto-ai/VideoLDM/">project page</a>
+							/
+							<a href="https://twitter.com/karsten_kreis/status/1648685632632553472">twitter</a>
+							<p></p>
+							<p>We take Stable Diffusion, insert additional temporal layers and fine-tune them on video data while keeping the spatial layers fixed.</p>
+						</td>
+					</tr>
           <tr>
 						<tr>
 							<td style="padding:20px;width:25%;vertical-align:middle">
@@ -311,6 +336,23 @@
         <a href="https://drive.google.com/file/d/1zSmLcy_r7Bthhkxwg_TFd5D1m9M4WZ1T/edit">slides</a>
         <p></p>
         Hosted by <a href="https://hci.iwr.uni-heidelberg.de/people/fhamprec">Fred Hamprecht</a>.
+        <br>
+      </td>
+    </tr>
+    <tr>
+      <td style="padding:20px;width:25%;vertical-align:middle">
+        <img src="assets/google_mouse.png" width="160" height="160">
+      </td>
+      <td width="70%" valign="middle">
+        <a href="https://nv-tlabs.github.io/DPDM/">
+        <papertitle>Differentially Private Diffusion Models</papertitle>
+        </a>
+        <br>
+        <em>Google Tech Talks: Differential Privacy for ML</em>, 12.04.2023
+        <br>
+        <a href="https://drive.google.com/file/d/1GzuLr6WStSrPNqqWUw7ylIUL0kLV9Rcp/view?usp=share_link">slides</a>
+        <p></p>
+        Hosted by <a href="http://www.thomas-steinke.net/">Thomas Steinke</a>.
         <br>
       </td>
     </tr>
