--- a/index.html
+++ b/index.html
@@ -28,12 +28,9 @@
                     <name>Tim Dockhorn</name>
                   </p>
                   <p>
-                    I am a research scientist at <a href="https://stability.ai/">Stability AI</a> and a final-year PhD
-                    student at the University of Waterloo, supervised by <a
-                      href="https://cs.uwaterloo.ca/~y328yu/">Yaoliang Yu</a>.
-                    My co-supervisor is <a href="https://homepages.inf.ed.ac.uk/imurray2/">Iain Murray</a>.
-                    Before starting my PhD, I obtained a Master of Mathematics from the University of Waterloo and a
-                    Bachelor of Science from the Technical University of Munich.
+                    I am a research scientist at <a href="https://stability.ai/">Stability AI</a>.
+                    I obtained my PhD and Master from the University of Waterloo, and a Bachelor of
+                    Science from the Technical University of Munich.
                     My main research interest is generative modeling, with a focus on diffusion models.
                   </p>
                   <p style="text-align:center">
@@ -82,9 +79,9 @@
                   /
                   <a href="https://github.com/Stability-AI/generative-models">code</a>
                   /
-                  <a href="https://huggingface.co/stabilityai/stable-diffusion-xl-base-0.9">weights</a>
+                  <a href="https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0">weights</a>
                   /
-                  <a href="https://huggingface.co/stabilityai/stable-diffusion-xl-refiner-0.9">refiner weights</a>
+                  <a href="https://huggingface.co/stabilityai/stable-diffusion-xl-refiner-1.0">refiner weights</a>
                   <p></p>
                   <p>We present SDXL an improved version of Stable Diffusion using several conditioning tricks and
                     multi-resolution training. We also release a refiner model to even further improve visual fidelity.
@@ -92,6 +89,31 @@
                 </td>
               </tr>
               <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src="assets/dpdm_complexity.png" alt="clean-usnob" width="160" height="143">
+                </td>
+                <td width="75%" valign="middle">
+                  <a href="https://nv-tlabs.github.io/DPDM/">
+                    <papertitle>Differentially Private Diffusion Models</papertitle>
+                  </a>
+                  <br>
+                  <strong>Tim Dockhorn</strong>, Tianshi Cao, <a href="http://latentspace.cc/">Arash Vahdat</a>, <a
+                    href="https://karstenkreis.github.io/">Karsten Kreis</a>
+                  <br>
+                  <em>TMLR (2835-8856)</em>, 2023
+                  <br>
+                  <a href="https://arxiv.org/abs/2210.09929">arXiv</a>
+                  /
+                  <a href="https://nv-tlabs.github.io/DPDM/">project page</a>
+                  /
+                  <a href="https://github.com/nv-tlabs/DPDM">code</a>
+                  /
+                  <a href="https://twitter.com/timudk/status/1582717593718181891">twitter</a>
+                  <p></p>
+                  <p>We train diffusion models with strict differential privacy guarantees and outperform previous
+                    methods by large margins.</p>
+                </td>
+              </tr>
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <video width=100% autoplay loop muted playsinline>
@@ -143,32 +165,6 @@
                   <a href="https://twitter.com/ZhongingAlong/status/1598336281792188417">twitter</a>
                   <p></p>
                   <p>We train diffusion models over molecular confirmations from cryo-EM imaging data.</p>
-                </td>
-              </tr>
-              <tr>
-                <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src="assets/dpdm_complexity.png" alt="clean-usnob" width="160" height="143">
-                </td>
-                <td width="75%" valign="middle">
-                  <a href="https://nv-tlabs.github.io/DPDM/">
-                    <papertitle>Differentially Private Diffusion Models</papertitle>
-                  </a>
-                  <br>
-                  <strong>Tim Dockhorn</strong>, Tianshi Cao, <a href="http://latentspace.cc/">Arash Vahdat</a>, <a
-                    href="https://karstenkreis.github.io/">Karsten Kreis</a>
-                  <br>
-                  <em>arXiv</em>, 2022
-                  <br>
-                  <a href="https://arxiv.org/abs/2210.09929">arXiv</a>
-                  /
-                  <a href="https://nv-tlabs.github.io/DPDM/">project page</a>
-                  /
-                  <a href="https://github.com/nv-tlabs/DPDM">code</a>
-                  /
-                  <a href="https://twitter.com/timudk/status/1582717593718181891">twitter</a>
-                  <p></p>
-                  <p>We train diffusion models with strict differential privacy guarantees and outperform previous
-                    methods by large margins.</p>
                 </td>
               </tr>
               <tr>
