--- a/index.html
+++ b/index.html
@@ -63,6 +63,38 @@
               <tr>
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
+                  <video width=100% autoplay loop muted playsinline>
+                    <source src="assets/svd.mp4#t=0.001" type="video/mp4" width="160" height="85">
+                  </video>
+                </td>
+                <td width="75%" valign="middle">
+                  <a href="https://github.com/Stability-AI/generative-models">
+                    <papertitle>Stable Video Diffusion: Scaling Latent Video Diffusion Models to Large Datasets
+                    </papertitle>
+                  </a>
+                  <br>
+                  Andreas Blattmann*, <strong>Tim Dockhorn</strong>*, Sumith Kulal*,Daniel Mendelevitch, Maciej Kilian,
+                  Dominik Lorenz, Yam Levi, Zion English, Vikram Voleti & Adam Letts & Varun Jampani, Robin Rombach
+                  <br>
+                  <em>arXiv</em>, 2023
+                  <br>
+                  <a href="https://github.com/Stability-AI/generative-models">code</a>
+                  /
+                  <a href="https://huggingface.co/stabilityai/stable-video-diffusion-img2vid">weights (svd)</a>
+                  /
+                  <a href="https://huggingface.co/stabilityai/stable-video-diffusion-img2vid-xt">weights (svd-xt)</a>
+                  <p></p>
+                  <p>We present Stable Video Diffusion,a latent video diffusion model for high-resolution,
+                    state-of-the-art text-to-video and image-to-video generation.
+                    We demonstrate the necessity of a well-curated pretraining dataset for generating high-quality
+                    videos and present a systematic curation process to train a strong base model, including captioning
+                    and filtering strategies.
+                  </p>
+                </td>
+              </tr>
+              <tr>
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
                   <img src="assets/SDXL.jpg" alt="clean-usnob" width="160" height="139">
                 </td>
                 <td width="75%" valign="middle">
