--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   Dustin Podell, Zion English, Kyle Lacey, Andreas Blattmann, <strong>Tim Dockhorn</strong>, Jonas
                   Müller, Joe Penna, Robin Rombach
                   <br>
-                  <em>arXiv</em>, 2023
+                  <em>ICLR</em>, 2024 &nbsp <font color="red"><strong>(Spotlight Presentation)</strong></font>
                   <br>
                   <a href="https://arxiv.org/abs/2307.01952">arXiv</a>
                   /
