--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                     <name>Tim Dockhorn</name>
                   </p>
                   <p>
-                    I am a research scientist at <a href="https://stability.ai/">Stability AI</a>.
                     I obtained my PhD and Master from the University of Waterloo, and a Bachelor of
                     Science from the Technical University of Munich.
                     My main research interest is generative modeling, with a focus on diffusion models.
@@ -61,6 +60,50 @@
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src="assets/sd3turbo.jpg" alt="clean-usnob" width="160" height="110">
+                </td>
+                <td width="75%" valign="middle">
+                  <a href="https://github.com/Stability-AI/generative-models">
+                    <papertitle>Fast High-Resolution Image Synthesis with Latent Adversarial Diffusion Distillation
+                    </papertitle>
+                  </a>
+                  <br>
+                  Axel Sauer, Frederic Boessel, <strong>Tim Dockhorn</strong>, Andreas Blattmann, Patrick Esser, Robin
+                  Rombach
+                  <br>
+                  <em>arXiv</em>, 2024
+                  <br>
+                  <a href="https://arxiv.org/abs/2403.12015">arXiv</a>
+                  <p></p>
+                  <p>We present a novel distillation method called Latent Adversarial Diffusion Distillation (LADD) and
+                    distill Stable Diffusin 3 down to one to four inference steps.
+                  </p>
+                </td>
+              </tr>
+              <tr>
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src="assets/sd3.jpeg" alt="clean-usnob" width="160" height="110">
+                </td>
+                <td width="75%" valign="middle">
+                  <a href="https://github.com/Stability-AI/generative-models">
+                    <papertitle>Scaling Rectified Flow Transformers for High-Resolution Image Synthesis</papertitle>
+                  </a>
+                  <br>
+                  Patrick Esser, Sumith Kulal, Andreas Blattmann, Rahim Entezari, Jonas Müller, Harry Saini, Yam Levi,
+                  Dominik Lorenz, Axel Sauer, Frederic Boesel, Dustin Podell, <strong>Tim Dockhorn</strong>, Zion
+                  English, Kyle Lacey, Alex Goodwin, Yannik Marek, Robin Rombach
+                  <br>
+                  <em>arXiv</em>, 2024
+                  <br>
+                  <a href="https://arxiv.org/abs/2403.03206">arXiv</a>
+                  <p></p>
+                  <p>We present Stable Diffusion 3 an improved version of Stable Diffusion using a novel multimodal
+                    Diffusion Transformer architecture.
+                  </p>
+                </td>
+              </tr>
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <video width=100% autoplay loop muted playsinline>
