--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     <name>Tim Dockhorn</name>
                   </p>
                   <p>
-                    I obtained my PhD and Master from the University of Waterloo, and a Bachelor of
+                    I am a research scientist and cofounder at <a href="https://blackforestlabs.ai/">Black Forest
+                      Labs</a>. I obtained my PhD and Master from the University of Waterloo, and a Bachelor of
                     Science from the Technical University of Munich.
                     My main research interest is generative modeling, with a focus on diffusion models.
                   </p>
@@ -72,7 +73,7 @@
                   Axel Sauer, Frederic Boessel, <strong>Tim Dockhorn</strong>, Andreas Blattmann, Patrick Esser, Robin
                   Rombach
                   <br>
-                  <em>arXiv</em>, 2024
+                  <em>SIGGRAPH Asia</em>, 2024
                   <br>
                   <a href="https://arxiv.org/abs/2403.12015">arXiv</a>
                   <p></p>
@@ -95,7 +96,7 @@
                   Dominik Lorenz, Axel Sauer, Frederic Boesel, Dustin Podell, <strong>Tim Dockhorn</strong>, Zion
                   English, Kyle Lacey, Alex Goodwin, Yannik Marek, Robin Rombach
                   <br>
-                  <em>arXiv</em>, 2024
+                  <em>ICML</em>, 2024 &nbsp <font color="red"><strong>(Best Paper Award)</strong></font>
                   <br>
                   <a href="https://arxiv.org/abs/2403.03206">arXiv</a>
                   <p></p>
